Fix header sizing on mobile

--- a/src/client/style/molecules/m-topic-title.pcss
+++ b/src/client/style/molecules/m-topic-title.pcss
@@ -1,9 +1,6 @@
-.m-topic-title {
-  min-height: 50px;
-}
-
 @mixin screen-size gt-xs {
   .m-topic-title {
+    min-height: 50px;
     text-align: center;
   }
 };
